--- a/No man's land.vcxproj.filters
+++ b/No man's land.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="pause.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Textbox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
