--- a/No man's land.vcxproj.filters
+++ b/No man's land.vcxproj.filters
@@ -41,5 +41,13 @@
     <ClInclude Include="Textbox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="board.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="name.txt">
+      <Filter>Header Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
